--- a/last.html
+++ b/last.html
@@ -341,7 +341,7 @@
         <div class="memory-card">
             <img src="WhatsApp Image 2025-03-17 at 22.03.58.jpeg" alt="Adventure Day" class="memory-img">
             <div class="memory-date">March 9, 2025</div>
-            <div class="memory-caption">That long night chat makes me feel happy but other side it made me feel emotional when you said " kaas agle zanam me tum mere bhai bano "🤧 ❤️</div>
+            <div class="memory-caption">That long night chat makes me feel happy but other side it made me feel emotional when you said "pyaar karte ho aur darte bhi ho" but how can I explain to you my reasons why I am always afraid even to text you something🤧 ❤️</div>
         </div>
     </div>
 
